--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow-x: hidden;
 }
 
 a {
@@ -24,4 +23,8 @@ a {
     color: white;
     background: black;
   }
+}
+[contentEditable=true]:empty:before{
+  color: var(--secondary-text);
+  content:attr(placeholder)
 }
